# opencode-vibes

./: .gitignore  AGENTS.md  Cargo.toml
.githooks/: pre-commit  pre-push
.github/workflows/: deploy-pages.yml
scripts/: build-web.sh  install-git-hooks.sh
src/: main.rs  pathtracer.wgsl
web/: index.html
