[package]
name = "cornell_egui_pathtracer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19", features = ["derive"] }
crossbeam-channel = "0.5"
eframe = { version = "0.29", features = ["wgpu"] }
image = { version = "0.25", default-features = false, features = ["png"] }
