[package]
name = "cornell_egui_pathtracer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19", features = ["derive"] }
crossbeam-channel = "0.5"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Node", "Window"] }
wgpu = { version = "27.0.1", default-features = false, features = ["std", "webgpu"] }
web-time = "1"
